--- a/v0.3/quiz.css
+++ b/v0.3/quiz.css
@@ -4,12 +4,32 @@ body {
     line-height: 1.5;
 }
 
+button {
+    text-decoration: none;
+    border: none;
+    background-color: mediumpurple;
+    color: white;
+    padding: 10px;
+    width: 200px;
+}
+
+button:disabled {
+    background-color: lavender;
+    color: gray;
+}
+
+button:hover {
+    background-color: indigo;
+}
+
 button.red {
-    background-color: red;
+    background-color: indianred;
+    color: white;
 }
 
 button.green {
-    background-color: green;
+    background-color: mediumseagreen;
+    color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
